--- a/_includes/partials/menu.njk
+++ b/_includes/partials/menu.njk
@@ -15,7 +15,7 @@
 {%- endmacro %}
 
 {% set navPages = collections.all | eleventyNavigation %}
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ '/' | url }}"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
