--- a/assets/css/registry.css
+++ b/assets/css/registry.css
@@ -1,40 +1,91 @@
+html {
+  --menu-bar-height: 55px;
+  --menu-icon: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+  padding: 0.1rem;
+  margin: 3px;
+}
+
+.navbar-light .navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-image: var(--menu-icon);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  border-radius: 0.2rem;
+}
+
+
+.navbar-toggler:focus {
+  box-shadow: none;
+  border: thin solid;
+}
+
 /* Base styles */
-body{
+body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
-.more{
-  display: inline-block;
-  width:1rem;
-  height: 0.5rem;
-  border:thin solid;
-}
-main{
-  margin:0;
 
-  h1{
+.more {
+  display: inline-block;
+  width: 1rem;
+  height: 0.5rem;
+  border: thin solid;
+}
+
+.navbar {
+  padding: 0.1rem;
+  height: auto;
+}
+
+nav.navbar.navbar-expand-lg {
+  overflow: auto;
+}
+
+.navbar-brand {
+  height: 2rem;
+  background-size: contain;
+}
+
+main {
+  margin: 0;
+  margin-top: 55px;
+  padding: 0;
+
+  h1 {
     font-size: clamp(1rem, 3.5vw, 2.488rem);;
-    margin:0;
+    margin: 0;
     padding: 0 0 1rem 0;
   }
 
-  h2{
+  h2 {
     font-size: clamp(1rem, 3vw, 1.8rem);
-    margin:0;
-    padding: 0.75rem 0;
+    margin: 0;
+    padding: 0;
     cursor: pointer;
+    text-decoration: underline;
+    margin: 0.75rem 0;
+    cursor: pointer;
+    color: #444444;
   }
-
 }
-ul{
+
+ul {
   padding: 0;
   list-style: none;
 }
 
-#header-container{
+#header-container {
   border-bottom: thin solid lightgrey;
 }
+
 button#reset {
   border-radius: 50%;
   width: 1.5rem;
@@ -51,28 +102,30 @@ button#reset {
 .panel {
   padding: 1rem 0;
 }
-.map-panel{
+
+.map-panel {
   background: white;
 }
+
 .divider {
   background-color: white;
   cursor: ew-resize; /* Resize cursor for dragging */
   text-align: center;
 
-  span{
+  span {
     width: 5rem;
-    height:0.25rem;
+    height: 0.25rem;
     background: lightgrey;
     border-radius: 0.25rem;
     display: inline-block;
   }
 }
 
-#search{
+#search {
   border-radius: 1.25rem;
   padding: 0.25rem 0.5rem;
   width: 100%;
-  border:thin solid;
+  border: thin solid;
 }
 
 #info-box {
@@ -81,14 +134,16 @@ button#reset {
   line-height: 1.2;
   width: calc(100% - 1rem);
 }
-.scroll-container{
-  overflow-y:scroll;
+
+.scroll-container {
+  overflow-y: scroll;
   height: 100vh;
   /*width:100vw;*/
-  padding:0 0.5rem;
-  padding-bottom:22rem;
+  padding: 0 0.5rem;
+  padding-bottom: 22rem;
 }
-#list-container{
+
+#list-container {
   padding: 1rem;
 }
 
@@ -100,71 +155,79 @@ button#reset {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    margin-top:4.25rem;
+    margin-top: var(--menu-bar-height);
     padding: 0;
   }
-  h1{
+
+  h1 {
     text-align: center;
   }
-  main:has(.full) .map-panel{
+
+  main:has(.full) .map-panel {
     height: 15vh;
     visibility: hidden;
   }
-  main:has(.full) #info-box{
+
+  main:has(.full) #info-box {
     display: none;
   }
 
-  main:has(.full) #list-container{
+  main:has(.full) #list-container {
     /*top:8.5rem;*/
-    top:166px;
+    top: 166px;
   }
-  /*
-  main:has(.full) #filter-container{
-    display: none;
-  }
-  */
-  main:has(.half) .map-panel{
+
+  main:has(.half) .map-panel {
     height: 50vh;
   }
-  main:has(.minimal) .map-panel{
+
+  main:has(.minimal) .map-panel {
     height: 80vh;
   }
-  main:has(.minimal) .leaflet-map-pane{
-    /*
-    top:-2.25rem;
-    position: fixed;
-    */
+
+  main:has(.minimal) .leaflet-map-pane {
     position: absolute;
-    top:0;
+    top: 0;
     background: lightgrey;
   }
-  main:has(.minimal) #list-container{
-    top:calc(100vh - 10rem);
+
+  main:has(.minimal) #list-container {
+    top: calc(100vh - 10rem);
   }
-  main:has(.minimal) #entries{
+
+  main:has(.minimal) #entries {
     display: none;
   }
-  main:has(.minimal) #header-container{
-    border:none;
+
+  #entries .list-item p {
+    margin: 0;
   }
-  main:has(.minimal) .scroll-container{
+  #entries .list-item a{
+    text-decoration: underline;
+    font-size: 0.8rem;
+  }
+
+  main:has(.minimal) #header-container {
+    border: none;
+  }
+
+  main:has(.minimal) .scroll-container {
     overflow: hidden;
   }
-  main:has(.leaflet-popup) #filter-container{
+
+  main:has(.leaflet-popup) #filter-container {
     z-index: -1;
   }
-  .leaflet-control-container{
+
+  .leaflet-control-container {
     display: none;
   }
-  .leaflet-popup{
+
+  .leaflet-popup {
     overflow: hidden;
     text-overflow: hidden;
   }
-  /*
-  map:has(.leaflet-popup) .leaflet-top{
-    z-index: -1;
-  }
-  */
+
   p {
     margin-top: 0;
     margin-bottom: 1rem;
@@ -172,16 +235,18 @@ button#reset {
     line-height: 1;
     max-width: calc(100% - 1rem);
   }
-  #filter-container{
+
+  #filter-container {
     position: fixed;
     z-index: 700;
-    top: 5rem;
-    left:50%;
-    transform:translateX(-50%);
+    top: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
     width: calc(100vw - 3rem);
     overflow: hidden;
   }
-  .divider{
+
+  .divider {
     width: 100vw;
     height: 1rem;
     display: flex;
@@ -189,12 +254,13 @@ button#reset {
     align-items: center;
     background: transparent;
   }
+
   .map-panel {
     height: calc(50vh); /* map is overlapped a bit by list-container to show it border-radius */
   }
 
   /*.list-panel {*/
-  #list-container{
+  #list-container {
     position: fixed;
     height: calc(100vh - 4.25rem);
     /*top: 4.25rem;*/
@@ -210,39 +276,13 @@ button#reset {
     transition: top 0.4s;
     box-shadow: 0.1rem 0.2rem .5rem #999999;
   }
-  panel{
+
+  panel {
     padding: 0.25rem;
   }
-  /*
-  .scroll-container{
-    overflow-y:scroll;
-    height: 100vh;
-    !*width:100vw;*!
-    padding:0 0.5rem;
-    padding-bottom:22rem;
-  }
-  */
 
-  /*
-  .list-panel.full-height {
-    height: calc(100vh - 50px);
-  }
-
-  .list-panel.half-height {
-    height: calc(50vh - 50px);
-  }
-
-  .list-panel.minimal-height {
-    height: calc(20vh - 50px); !* Adjust minimal height as needed *!
-  }
-  */
-
-  /*
-  .divider {
-    display: none;
-  }
-  */
 }
+
 
 /* Landscape and desktop */
 @media (orientation: landscape) or (min-width: 769px) {
@@ -250,24 +290,29 @@ button#reset {
     display: flex;
     flex-direction: row-reverse;
   }
-  #filter-container{
-    position:fixed;
-    z-index:500;
-    top: 5rem;
+
+  #filter-container {
+    position: fixed;
+    z-index: 500;
+    top: 3.5rem;
     right: 1rem;
-    width:calc(50vw - 5rem);
+    width: calc(50vw - 5rem);
   }
-  #search{
-
+  main:has(.leaflet-popup) #filter-container{
+    z-index: -1;
+  }
+  main:has(.leaflet-popup) .leaflet-control-container{
+    z-index: -1;
   }
 
-  .divider{
+  .divider {
     display: none;
     position: fixed;
-    left:50vw;
+    left: 50vw;
     width: 1rem;
-    height:100vh;
+    height: 100vh;
   }
+
   .map-panel {
     flex: 1;
   }
@@ -278,3 +323,4 @@ button#reset {
   }
 
 }
+
