Changing tei-publisher links from .com to .org

--- a/_includes/partials/sidebar-flyer.njk
+++ b/_includes/partials/sidebar-flyer.njk
@@ -4,7 +4,7 @@
         <div>Download Flyer</div>            
     </a>    
     <hr>
-    <a href="https://tei-publisher.com">
+    <a href="https://tei-publisher.org">
         <div style="padding-bottom:1em;">A toolbox by and for the digital humanities</div>            
         <svg width="90%"  viewBox="0 0 872 229" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title desc" role="img">
             <title id="title">TEI Publisher Logo</title>
